[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GUI/button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/textures/background.png" type="Texture" id=3]
[ext_resource path="res://scenes/GUI/main_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/bllob/bllob_frames.tres" type="SpriteFrames" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -1920.0
margin_top = -136.0
margin_right = 3232.0
margin_bottom = 864.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 280.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 1 )
text = "Bllob"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="." instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 192.0
margin_right = 209.0
margin_bottom = 232.0

[node name="Label" parent="PlayButton/CenterContainer" index="0"]
margin_left = 51.0
margin_top = 9.0
margin_right = 94.0
margin_bottom = 30.0
text = "Play!"

[node name="CreditsButton" parent="." instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 256.0
margin_right = 209.0
margin_bottom = 296.0

[node name="Label" parent="CreditsButton/CenterContainer" index="0"]
margin_left = 38.0
margin_top = 9.0
margin_right = 107.0
margin_bottom = 30.0
text = "Credits"

[node name="ExitButton" parent="." instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 360.0
margin_right = 209.0
margin_bottom = 400.0

[node name="Label" parent="ExitButton/CenterContainer" index="0"]
margin_left = 55.0
margin_top = 9.0
margin_right = 90.0
margin_bottom = 30.0
text = "Exit"

[node name="DemoBllob" type="AnimatedSprite" parent="."]
position = Vector2( 656, 472 )
frames = ExtResource( 5 )
animation = "adult"
playing = true

[node name="DemoBllob2" type="AnimatedSprite" parent="."]
position = Vector2( 208, 528 )
frames = ExtResource( 5 )
animation = "adult"
frame = 2
playing = true
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[editable path="PlayButton"]

[editable path="CreditsButton"]

[editable path="ExitButton"]
